# ros2_perception_node

./: .gitignore  Dockerfile  README.md  helper
scripts/: image_extract.py  ros2.py
workspace_src/perception/: CMakeLists.txt  package.xml  setup.py
workspace_src/perception/msg/: DetectedObject.msg
workspace_src/perception/perception/: tracker.py
workspace_src/perception/perception/launch/: test.xml
workspace_src/perception_interfaces/: CMakeLists.txt  package.xml
workspace_src/perception_interfaces/msg/: DetectedObject.msg  DetectionFrame.msg
workspace_src/test_msgs_pkg/: CMakeLists.txt  package.xml
workspace_src/test_msgs_pkg/msg/: TestMsg.msg
