<?xml version="1.0"?>
<package format="3">
  <name>test_msgs_pkg</name>
  <version>0.0.0</version>
  <description>Minimal test msg package</description>
  <maintainer email="you@example.com">Azhar</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <member_of_group>rosidl_interface_packages</member_of_group>
  </export>
</package>
